# matrix_cache

./: .gitignore  CMakeLists.txt  main.cpp  matrix_cache.code-workspace  relatorio.ipynb  tools.py
benchmarks/: CMakeLists.txt  Matrix-benchmarks.cpp
cmake/: CxxOpts.cmake  DownloadProject.CMakeLists.cmake.in  GoogleBenchmark.cmake  GoogleTest.cmake
files/: dimensions  matrix_1  matrix_1_2  matrix_1_2_prod  matrix_2
include/matrix_cache/: matrix.h  utils.h
scripts/: gen_matrix
src/: CMakeLists.txt  main.cpp  matrix.cpp  utils.cpp
tests/: CMakeLists.txt  Matrix-tests.cpp
